# dot

./: Cargo.toml  README.md  lefthook.yaml
apps/desktop/src/: event.rs  main.rs
apps/desktop/src/platform/linux/: x11.rs
scripts/: commit-lint.sh
src/: event.rs  main.rs
src/platform/linux/: x11.rs
